--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,11 +4,40 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4" id="welcome">Welcome</h1>
+    <button class="btn btn-danger" id="btnToChange">to change</button>
     <ul class="list-group">
         @foreach (var city in Model)
         {
             <li class="list-group-item">@city</li>
         }
     </ul>
+    <ul id="students">
+
+    </ul>
 </div>
+@section Scripts{
+    <script>
+        $(document).ready(function (){
+            $('#btnToChange').click(function(){
+                $('#welcome').html('changed content');
+                $.ajax({
+                    url: '@Url.Action("Students","Home")',
+                    type: 'get',
+                    dataType:'json',
+                    contentType:'application/json;charset=utf-8',
+                    success:function(result){
+                        console.log(result);
+                        $('#students li').each(function(){$(this).remove()});
+                        for(var i=0;i < result.length;i++){
+                            $('#students').append(`<li>${result[i].NameSurname}</li>`);
+                        }
+                    },
+                    error:function(err){
+                        console.log(err.statusText);
+                    }
+                })
+            })
+        })
+    </script>
+}
